# Sel-Pop

./: .gitmodules  CONTRIBUTING.md  README.md  config.example.ini  requirements.txt  sel_pop_build.bat  sel_pop_linux_x64.spec  sel_pop_win_x64.spec
.github/workflows/: release.yml
docs/: CUSTOM_OCR_PROVIDER.md
docs/superpowers/plans/: 2026-05-27-lazy-senses-and-frequency.md
docs/superpowers/specs/: 2026-05-27-lazy-senses-and-frequency-design.md
native/: CMakeLists.txt  hoshidicts_server.cpp
scripts/: build_hoshidicts.ps1  yomitan_language_bundle_entry.mjs
src/: main.py
src/config/: config.py
src/dictionary/: anki_client.py  customdict.py  deconjugator.py  hoshidicts_backend.py  languages.py  lookup.py  structured_content.py  yomitan_importer.py  yomitan_language_bundle.js  yomitan_language_engine.py
src/gui/: dictionary_web_view.py  input.py  popup.py  settings_dialog.py  tray.py
src/ocr/: hit_scan.py
src/ocr/providers/dummy/: provider.py
src/ocr/providers/glensv2/: provider.py
src/ocr/providers/meikiocr/: provider.py
src/ocr/providers/owocr/: provider.py
src/ocr/providers/screenai/: provider.py
src/screenshot/: screenmanager.py
tests/: test_yomitan_languages.py
